# openobservectl

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  pyrefly-baseline.json
.claude/: settings.example.json  settings.json
.github/workflows/: ci.yml  pyrefly-diff-comment.yml  pyrefly-diff.yml  pyrefly-type-coverage-comment.yml  pyrefly-type-coverage.yml
docs/: design.md
scripts/: pyrefly_type_coverage.py
specs/: gh-pyrefly.md  live-tail.md  pyrefly.md
src/openobservectl/: __init__.py  __main__.py  cli.py  common.py  config.py  render.py  tail.py
src/openobservectl/dashboards/Correlation/: cause-effect.json
src/openobservectl/dashboards/Infrastructure/: container-metrics.json  host-metrics.json  prometheus-health.json  traces-by-service.json  traces-overview.json  uptime.json
src/openobservectl/dashboards/LogAnalysis/: container-logs.json  error-triage.json  k0s-pods.json  log-overview.json  per-host.json
tests/: conftest.py  test_cli.py  test_common.py  test_config.py  test_dashboards.py  test_render.py  test_tail.py
