[project]
name = "openobservectl"
description = "CLI to verify, introspect, and import dashboards into an OpenObserve instance over its REST API."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.scripts]
openobservectl = "openobservectl.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpserver>=1.1",
    "pytest-mock>=3",
    "pytest-cov>=5",
    "pytest-randomly>=3",
    "ruff>=0.11",
    "basedpyright>=1.19",
    "codespell>=2.3",
    "pyrefly>=1.1.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/openobservectl"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
# B008: typer relies on function calls (typer.Option/Argument) in argument defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not integration'"
testpaths = ["tests"]
filterwarnings = ["ignore::SyntaxWarning"]
asyncio_mode = "auto"
markers = [
    "integration: opt-in live tests against a running OpenObserve (deselected by default)",
]

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.11"          # matches .python-version and requires-python floor
